# pfff

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  INSTALL.txt  Makefile.libs  Makefile.win  Pfff.dev  README.txt
examples/: CMakeLists.txt  Makefile.win  PfffExamples.dev
examples/ruby/doc/: results.gnumeric
examples/src/: CMakeLists.txt  TimeHelpers.cpp  TimeHelpers.h  disk-read-experiment-2.cpp  disk-read-experiment-3.cpp  disk-read-experiment.cpp  most-similar-pair.cpp  pfff-timings.cpp  utils.cpp  utils.h
libsrc/md5/: CMakeLists.txt  Makefile
libsrc/mtwister/: CMakeLists.txt  MTwister.cpp  MTwister.h  Makefile
libsrc/optionmanager/: CMakeLists.txt  Makefile  OptionManager.cpp  OptionManager.h
libsrc/poly1305aes-embed/: CMakeLists.txt  Makefile  README.txt  aes_any.S  aes_any_c.c  aes_any_constants.S  aes_any_constants_c.c  poly1305_any.S  poly1305_any_c.c  poly1305_any_constants.S  poly1305_any_constants_c.c  poly1305aes_any.h  poly1305aes_any_authenticate.c  poly1305aes_any_clamp.c  poly1305aes_any_isequal.S  poly1305aes_any_isequal_c.c  poly1305aes_any_verify.c  poly1305aes_select_arch.h
libsrc/socket/: CMakeLists.txt  FtpSocket.cpp  FtpSocket.h  HttpSocket.cpp  HttpSocket.h  Makefile  Socket.cpp  Socket.h
src/: CMakeLists.txt  PfffBlockReader.cpp  PfffBlockReader.h  PfffBlockSampleGenerator.cpp  PfffBlockSampleGenerator.h  PfffCLib.cpp  PfffCLib.h  PfffFindDuplicatesOptionManager.cpp  PfffFindDuplicatesOptionManager.h  PfffFtpBlockReader.cpp  PfffFtpBlockReader.h  PfffHasher.cpp  PfffHasher.h  PfffHttpBlockReader.cpp  PfffHttpBlockReader.h  PfffOptionManager.cpp  PfffOptionManager.h  PfffOptions.cpp  PfffOptions.h  PfffOutputFormatter.cpp  PfffOutputFormatter.h  PfffPostHashing.cpp  PfffPostHashing.h  file_utils.cpp  file_utils.h  output_utils.cpp  output_utils.h  pfff-find-duplicates.cpp  pfff.cpp
tests/: CMakeLists.txt  Makefile  Makefile.libs  Makefile.win  PfffTest.dev
tests/data/: TestMTwister.out  TestPfffBlockSampleGenerator.out  TestPfffHasher.out  TestPfffHasherOnFiles.out  TestPfffOptions.in  TestPfffOptions.out  TestPostHashers.out
tests/libsrc/UnitTest++/: CMakeLists.txt  Makefile
tests/libsrc/UnitTest++/src/: CMakeLists.txt  DeferredTestResult.cpp  DeferredTestResult.h  TestMacros.h  TestReporterStdout.cpp  TestRunner.cpp  TestRunner.h  TimeConstraint.cpp
tests/libsrc/UnitTest++/src/Win32/: TimeHelpers.cpp  TimeHelpers.h
tests/libsrc/UnitTest++/src/tests/: TestTestMacros.cpp  TestTestRunner.cpp  TestTimeConstraintMacro.cpp
tests/src/: CMakeLists.txt  TestHexOutput.cpp  TestMTwister.cpp  TestPfffBlockSampleGenerator.cpp  TestPfffCLibOnFiles.cpp  TestPfffHasher.cpp  TestPfffHasherOnFiles.cpp  TestPfffOptions.cpp  TestPfffOutputFormatter.cpp  TestPlatform.cpp  TestPostHashers.cpp  TestTimings.cpp  config.h  main.cpp  test_util.cpp  test_util.h
